added basic bootstrap components

--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <header class="header">Weather Dashboard</header>
+
+    <div class="flex-container">
+        <div class="row">
+            <div class="col-3 justify-content-center">
+                    <h5 class="justify-content-center pt-2 pl-3">Search by city: </h5>
+                    <form class="form-inline my-2 my-lg-0 mt-3 ml-3">
+                            <input class="form-control mr-sm-2 float-left" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0 float-right" type="submit">Search</button>
+                    </form>
+            </div>
+            <div class="col-9"> 
+                    <div class="jumbotron">
+                            <div class="container">
+                              <h1 class="display-3">Fluid jumbotron</h1>
+                              <p class="lead">This is a modified jumbotron that occupies
+                                              the entire horizontal space of its parent.</p>
+                            </div>
+                    </div>
+
+            </div>
+        </div>
+    </div>
 
 
 
