--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
                         <h2 class="justify-content-center text-dark">Today's Weather</h2>
                         <div class="row">
                             <div class="col-6">
-                                <p>Temperature:</p>
-                                <p>Humidity</p>
-                                <p>Wind Speed</p>
+                                <p id="today_temp"></p>
+                                <p id="today_humidity"></p>
+                                <p id="today_wind_speed"></p>
+                                <img id="today_icon_div" src=""></img>
                             </div>
                         </div> 
                 </div>  
@@ -52,15 +53,15 @@
                         <h5 class="text-dark">Five Day Weather Forecast</h5>
                     </div>
                 <div class="row justify-content-center">
-                    <div id="day1" class="card-body mx-2 my-2"><span ></span>
+                    <div id="day0" class="card-body mx-2 my-2"><span ></span>
                     </div>
-                    <div id="day2" class="card-body mx-2 my-2">
+                    <div id="day1" class="card-body mx-2 my-2">
                     </div>
-                    <div id="day3" class="card-body mx-2 my-2"> 
+                    <div id="day2" class="card-body mx-2 my-2"> 
+                    </div>
+                    <div id="day3" class="card-body mx-2 my-2">
                     </div>
                     <div id="day4" class="card-body mx-2 my-2">
-                    </div>
-                    <div id="day5" class="card-body mx-2 my-2">
                     </div>
                 </div>
             </div>
