wrote initial for-loop to make 5 day forecast, only works for 1st card

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </form>
                     </div>
                     <div class="container my-3 col-6">
-                        <button id="city1" type="button" class="btn my-2 w-100">Atlanta</button>
+                        <button id="city1" type="button" class="btn my-2 w-100 span6 offset2">Atlanta</button>
                         <button id="city-2" type="button" class="btn my-2 w-100">Chicago</button>
                         <button id="city-3" type="button" class="btn my-2 w-100">New York</button>
                         <button id="city-4" type="button" class="btn my-2 w-100">New York</button>
@@ -53,7 +53,10 @@
                         <h5 class="text-dark">Five Day Weather Forecast</h5>
                     </div>
                 <div class="row justify-content-center">
-                    <div id="day0" class="card-body mx-2 my-2"><span ></span>
+                    <div id="day0" class="card-body mx-2 my-2">
+                        <h5 id="0date"></h5>
+                        <p id="0five_day_temp"></p>
+                        <p id="0five_day_humidity"></p>
                     </div>
                     <div id="day1" class="card-body mx-2 my-2">
                     </div>
