added more info to 5-day card, still not iterating correctly

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <p id="today_temp"></p>
                                 <p id="today_humidity"></p>
                                 <p id="today_wind_speed"></p>
-                                <img id="today_icon_div" src=""></img>
+                                <img id="today_icon_div" src="">
                             </div>
                         </div> 
                 </div>  
@@ -57,6 +57,7 @@
                         <h5 id="0date"></h5>
                         <p id="0five_day_temp"></p>
                         <p id="0five_day_humidity"></p>
+                        <img id="0five_day_icon" src="">
                     </div>
                     <div id="day1" class="card-body mx-2 my-2">
                     </div>
