FINALLY GOT 5 DAY FORECAST WORKING IT WAS SUCH A DUMB ERROR

--- a/index.html
+++ b/index.html
@@ -60,12 +60,28 @@
                         <img id="0five_day_icon" src="">
                     </div>
                     <div id="day1" class="card-body mx-2 my-2">
+                            <h5 id="1date"></h5>
+                            <p id="1five_day_temp"></p>
+                            <p id="1five_day_humidity"></p>
+                            <img id="1five_day_icon" src="">
                     </div>
                     <div id="day2" class="card-body mx-2 my-2"> 
+                            <h5 id="2date"></h5>
+                            <p id="2five_day_temp"></p>
+                            <p id="2five_day_humidity"></p>
+                            <img id="2five_day_icon" src="">
                     </div>
                     <div id="day3" class="card-body mx-2 my-2">
+                            <h5 id="3date"></h5>
+                            <p id="3five_day_temp"></p>
+                            <p id="3five_day_humidity"></p>
+                            <img id="3five_day_icon" src="">
                     </div>
                     <div id="day4" class="card-body mx-2 my-2">
+                            <h5 id="4date"></h5>
+                            <p id="4five_day_temp"></p>
+                            <p id="4five_day_humidity"></p>
+                            <img id="4five_day_icon" src="">
                     </div>
                 </div>
             </div>
