--- a/index.html
+++ b/index.html
@@ -16,20 +16,15 @@
 
     <div class="container-fluid row">
             <div class="col-3 left_div justify-content-center pt-3">
-                    <div class="search_div">
+                    <div class="search_div mb-4">
                     <h5 class="justify-content-center pt-2 pl-3">Search by city: </h5>
                         <form class="form-inline my-2 my-lg-0 mt-3 ml-3" onsubmit="return false">
                                 <input class="form-control mr-sm-2 float-left" type="search" placeholder="Search" id= "search_bar" aria-label="Search">
                                 <button id="searchbtn" class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
                         </form>
                     </div>
-                    <div class="container my-3 col-6">
-                        <button id="city1" type="button" class="btn my-2 w-100 span6 offset2">Atlanta</button>
-                        <button id="city-2" type="button" class="btn my-2 w-100">Chicago</button>
-                        <button id="city-3" type="button" class="btn my-2 w-100">New York</button>
-                        <button id="city-4" type="button" class="btn my-2 w-100">New York</button>
-                        <button id="city-5" type="button" class="btn my-2 w-100">New York</button>
-                        <button id="city-6" type="button" class="btn my-2 w-100">New York</button>
+                    <div class="container my-3 col-6" id="searched_cities_container">
+
                     </div>
             </div>
 
