changed header to update to show name of city

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
         <div class="today_weather col-9 pt-3">
                 <div class="bg-light p-3">
-                        <h2 class="justify-content-center text-dark">Today's Weather</h2>
+                        <h2 class="justify-content-center text-dark" id="name_of_city"></h2>
                         <div class="row">
                             <div class="col-6">
                                 <p id="today_temp"></p>
