added title to search history section; still need search btns to work

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                                 <button id="searchbtn" class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
                         </form>
                     </div>
+                    <h5 class="justify-content-center pt-2 pl-3">Your previously searched cities: </h5>
                     <div class="container my-3 col-12" id="searched_cities_container">
 
                     </div>
