isolated AJAX calls into their own function
I took the 2 ajax calls out of the search button click listener function and wrapped them in their own function called 'APIcalls', then invoked APIcalls inside the click listener so the AJAX calls still run on click. Then I set a new click listener on the search history buttons, which also invoked the APIcalls function. The only functional difference between the 2 click listeners is how the city is defined. However, once the user uses the search bar, the list buttons stop responding. This is an issue that must be resolved.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="col-3 left_div justify-content-center pt-3">
                     <div class="search_div mb-4">
                     <h5 class="justify-content-center pt-2 pl-3">Search by city: </h5>
-                        <form class="form-inline my-2 my-lg-0 mt-3 ml-3" onsubmit="return false">
+                        <form class="form-inline my-2 my-lg-0 mt-3 ml-3">
                                 <input class="form-control mr-sm-2 float-left" type="search" placeholder="Search" id= "search_bar" aria-label="Search">
                                 <button id="searchbtn" class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
                         </form>
